[tool.poetry]
name = "john_toolbox"
version = "0.5.1"
description = "Wrapper for transformers scikit learn pipeline and wrapper for ml model"
authors = ["john <contact@nguyenjohnathan.com>"]
# New attributes
license = "MIT"
readme = "README.md"
homepage = "https://github.com/nguyenanht/john-toolbox"
repository = "https://github.com/nguyenanht/john-toolbox"
keywords = ["sklearn", "pipeline", "pytorch"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pandas = "^1.1"
numpy = "^1.19"
tqdm = "^4.51"
Jinja2 = "^2.11.0,<3.0.0"
MarkupSafe = "2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
jupyterlab = "^3.4.2"
jupyter = "^1.0.0"
jupytext = "^1.11.1"
jupyter-contrib-nbextensions = "^0.5.1"
sphinx-rtd-theme = "^0.5.1"
recommonmark = "^0.7.1"
autopep8 = "^1.5.6"
Sphinx = "^3.5.3"
coverage = "^5.5"
torchvision = "^0.8.1"
beautifulsoup4 = "^4.9"
xgboost = "^1.3"
matplotlib = "^3.1.1"
torch = "^1.7"
boto3 = "^1.16"
seaborn = "^0.11.1"
catboost = "^1.0.3"
scikit-learn = "^1.1.0"
jupyterthemes = "^0.20.0"
optuna = "^2.10.0"
flake8 = "^4.0.1"
black = "^22.3.0"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry-version-plugin]
source = "init"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:",
]

[tool.black]
line-length = 80
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''