[tool.poetry]
name = "john_toolbox"
version = "0.5.1"
description = "Toolbox for scikit learn pipeline and wrapper for AI models."
authors = ["john <nonosnguyen@gmail.com>"]
# New attributes
license = "MIT"
readme = "README.md"
homepage = "https://github.com/nguyenanht/john-toolbox"
repository = "https://github.com/nguyenanht/john-toolbox"
keywords = ["sklearn", "pipeline", "pytorch"]
include = ["LICENSE"]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pandas = "^1.1"
tqdm = "^4.51"
Jinja2 = "^2.11.0,<3.0.0"
MarkupSafe = "2.0.1"
ipywidgets = "7.6.5"

[tool.poetry.group.dev.dependencies]
pytest = "^3.0"
jupyterlab = "^3.4.2"
jupyter = "^1.0.0"
jupytext = "^1.11.1"
jupyter-contrib-nbextensions = "^0.5.1"
sphinx-rtd-theme = "^0.5.1"
recommonmark = "^0.7.1"
autopep8 = "^1.5.6"
Sphinx = "^3.5.3"
coverage = "^5.5"
beautifulsoup4 = "^4.9"
xgboost = "^1.3"
matplotlib = "^3.1.1"
boto3 = "^1.16"
seaborn = "^0.11.1"
catboost = "^1.0.3"
scikit-learn = "^1.1.0"
jupyterthemes = "^0.20.0"
flake8 = "^4.0.1"
black = "^22.3.0"
pre-commit = "^2.19.0"
plotly = "^5.14.0"
lightgbm = "^3.3.5"
optuna = "3.0"
datasets = "^2.16.1"
tokenizers = "^0.15.0"
torch = "^2.1.2"
torchmetrics = "^1.3.0.post0"
tensorboard = "^2.15.1"
torchvision = "^0.16.2"
torchaudio = "^2.1.2"
torchtext = "^0.16.2"
ruff = "^0.1.14"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry-version-plugin]
source = "init" # https://github.com/tiangolo/poetry-version-plugin

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning:"]


[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 39
line_length = 100

known_typing = [
    "typing",
    "types",
    "typing_extensions",
    "mypy",
    "mypy_extensions",
]
sections = [
    "FUTURE",
    "TYPING",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.black]
line-length = 80
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/foo.py  # exclude a file named foo.py in the root of the project (in addition to the defaults)
'''